--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.4.3",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@hookform/resolvers": "^2.9.10",
     "@prisma/client": "4.7.1",
     "@types/node": "18.11.13",
     "@types/react": "18.0.26",
@@ -29,7 +30,8 @@
     "react-select": "^5.7.0",
     "react-table": "^7.8.0",
     "swr": "^2.0.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "prisma": "^4.7.1"
