--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "13.0.6",
     "next-auth": "^4.18.4",
     "react": "18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.40.0",
     "react-select": "^5.7.0",
@@ -34,6 +35,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.8.0",
     "prisma": "^4.7.1"
   }
 }
