--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE"
 AUTH0_CLIENT_ID=""
 AUTH0_CLIENT_SECRET=""
 AUTH0_ISSUER=""
+
+NEXTAUTH_SECRET=""
