--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.10.5",
     "@hookform/resolvers": "^2.9.10",
     "@prisma/client": "4.7.1",
+    "@tanstack/react-table": "^8.7.3",
     "@types/node": "18.11.13",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
@@ -30,7 +31,6 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.40.0",
     "react-select": "^5.7.0",
-    "react-table": "^7.8.0",
     "swr": "^2.0.0",
     "typescript": "4.9.4",
     "yup": "^0.32.11"
