--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@emotion/styled": "^11.10.5",
     "@hookform/resolvers": "^2.9.10",
     "@prisma/client": "4.7.1",
-    "@tanstack/react-table": "^8.7.3",
+    "@tanstack/react-table": "8.7.0",
     "@types/node": "18.11.13",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
