--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.13",
@@ -14,18 +15,18 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@hookform/resolvers": "^2.9.10",
-    "@prisma/client": "4.7.1",
+    "@prisma/client": "^5.5.2",
     "@tanstack/react-table": "8.7.0",
     "@types/node": "18.11.13",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.0",
     "axios": "^1.2.1",
     "dayjs": "^1.11.7",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "framer-motion": "^7.6.19",
     "next": "13.0.6",
-    "next-auth": "^4.18.4",
+    "next-auth": "^4.24.4",
     "react": "18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
@@ -37,6 +38,6 @@
   },
   "devDependencies": {
     "@types/react-datepicker": "^4.8.0",
-    "prisma": "^4.7.1"
+    "prisma": "^5.5.2"
   }
 }
